[gd_scene load_steps=13 format=3 uid="uid://bmt1oyebdsjmh"]

[ext_resource type="Script" uid="uid://che0qofwu1cll" path="res://scenes/GameMode/GameMode.gd" id="1_86ymx"]
[ext_resource type="Texture2D" uid="uid://bpdi62k0e7tlg" path="res://assets/ui/backgrounds/CRTmonitor.png" id="2_vasyn"]
[ext_resource type="Theme" uid="uid://dly54hmbgdvr7" path="res://Themes/OptionsButton.tres" id="3_0rj7k"]
[ext_resource type="FontFile" uid="uid://b33kuu0osw1kp" path="res://fonts/CyberpunkCraftpixPixel.otf" id="4_4snny"]
[ext_resource type="Theme" uid="uid://oujpfweyjjqt" path="res://Themes/Main_Button_1.tres" id="5_0abtg"]
[ext_resource type="Texture2D" uid="uid://cdh5u7ihcelbs" path="res://assets/ui/icons/back_icon.png" id="6_u3mau"]
[ext_resource type="Texture2D" uid="uid://devk5oekcoxi3" path="res://assets/ui/decorations/vsAI.png" id="7_wud22"]
[ext_resource type="Texture2D" uid="uid://bubetprl8jw1r" path="res://assets/ui/decorations/onlinePlayButton.png" id="8_mckn2"]
[ext_resource type="Texture2D" uid="uid://u45sm7lyofd1" path="res://assets/ui/decorations/localPlayButton.png" id="9_p7kgk"]
[ext_resource type="PackedScene" uid="uid://c5i3e2xoursyb" path="res://scenes/AIOptionsModeScreen.tscn" id="10_geqlg"]
[ext_resource type="PackedScene" uid="uid://g7trfgkrt2u7" path="res://scenes/OnlineModeScreen.tscn" id="11_byo56"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_564fn"]
texture = ExtResource("2_vasyn")

[node name="GameModeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86ymx")

[node name="ModeOptions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_564fn")

[node name="LocalPlayModeButton" type="Button" parent="ModeOptions"]
layout_mode = 0
offset_left = 808.0
offset_top = 763.0
offset_right = 1128.0
offset_bottom = 851.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_0rj7k")
theme_override_font_sizes/font_size = 30
text = "Local"

[node name="OnlineModeButton" type="Button" parent="ModeOptions"]
layout_mode = 0
offset_left = 1312.0
offset_top = 763.0
offset_right = 1632.0
offset_bottom = 851.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_0rj7k")
theme_override_font_sizes/font_size = 30
text = "Online"

[node name="AIModeButton" type="Button" parent="ModeOptions"]
layout_mode = 0
offset_left = 288.0
offset_top = 763.0
offset_right = 608.0
offset_bottom = 851.0
size_flags_vertical = 10
theme = ExtResource("3_0rj7k")
theme_override_fonts/font = ExtResource("4_4snny")
theme_override_font_sizes/font_size = 30
text = "CPU"

[node name="BackButton" type="Button" parent="ModeOptions"]
layout_mode = 0
offset_left = 123.0
offset_top = 117.0
offset_right = 218.80508
offset_bottom = 212.0
theme = ExtResource("5_0abtg")

[node name="Icon" type="Sprite2D" parent="ModeOptions/BackButton"]
position = Vector2(46.000004, 49.000004)
scale = Vector2(3.3125005, 3.3125005)
texture = ExtResource("6_u3mau")

[node name="Sprites" type="Node2D" parent="."]

[node name="AIPlayModeSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(459.99997, 498.99994)
scale = Vector2(3.1666667, 3.166667)
texture = ExtResource("7_wud22")

[node name="OnlinePlayModeSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(1472.0001, 499)
scale = Vector2(3.1543071, 3.1543071)
texture = ExtResource("8_mckn2")

[node name="LocalPlayModeSprite" type="Sprite2D" parent="Sprites"]
position = Vector2(976, 506.99994)
scale = Vector2(3.072034, 3.072034)
texture = ExtResource("9_p7kgk")

[node name="DimOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8784314)

[node name="AIOptionPopup" parent="." instance=ExtResource("10_geqlg")]
visible = false
layout_mode = 1

[node name="OnlineOptionPopup" parent="." instance=ExtResource("11_byo56")]
visible = false
layout_mode = 1

[connection signal="pressed" from="ModeOptions/LocalPlayModeButton" to="." method="_on_local_play_mode_button_pressed"]
[connection signal="pressed" from="ModeOptions/OnlineModeButton" to="." method="_on_online_mode_pressed"]
[connection signal="pressed" from="ModeOptions/AIModeButton" to="." method="_on_ai_mode_button_pressed"]
[connection signal="pressed" from="ModeOptions/BackButton" to="." method="_on_back_button_pressed"]
